build: set version to maven-surefire-plugin